--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="ropa, indumentaria, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
 		<link rel="stylesheet" href="css/main.css">
-		<title>Cruellashowroom</title>
+		<title>Cruellashowrooom</title>
   </head>
 	<body class="grid body">
 		<header>
