--- a/looks2021.html
+++ b/looks2021.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/main.css">
 
 		<!-- titulo del showroom -->
-		<title>Cruellashowroom</title>
+		<title>Cruellashowrooom</title>
 	</head>
 	<body>
 		<header>
