--- a/sale.html
+++ b/sale.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Cruellashowroom</title>
+		<title>Cruellashowrooom</title>
 		<meta name="description" content="cruellashowroom- indumentaria y accesorios. Descubrí nuestra nueva temporada Primavera Verano de Ropa Femenina. ¡Venta al por Mayor y menos! Envíos a todo el País. ">
 		<meta name="keywords" content="ropa, indumentaria, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
