--- a/comocomprar.html
+++ b/comocomprar.html
@@ -11,61 +11,43 @@
 	</head>
 	<body>
 		<header>
-			<div>
-				<a href="index.html">
-					<img src="img/logo.png" alt="logo Cruellashowroom">
-				</a>
-			</div>
-				<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-  <div class="container-fluid">
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="tienda.html">TIENDA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="looks2021.html">LOOK2021</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sale.html">SALE</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="comocomprar.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            COMOCOMPRAR
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="contacto.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+			<nav>
+				<div>
+					<a href="index.html">
+						<img src="img/logo.png" alt="logo Cruellashowroom">
+					</a>
+				</div>
+				<ul>
+					<li>
+						<a href="tienda.html">Tienda</a>
+					</li>
+					<li>
+						<a href="sale.html">Sale</a>
+					</li>
+					<li>
+						<a href="looks2021.html">looks2021</a>
+					</li>
+					<li>
+						<a href="comocomprar.html">Ayuda</a>
+					</li>
+					<li>
+						<a href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+			</nav>
 			<div>
 				<img class="local" src="img/local.png" alt="Cruella showroom indumentaria femenina">
 			</div>
 		</header>
-		<main id="ayudaTabla">
-			<section id="ayuda"> 
+		<main id="ayuda">
+			<section> 
 				<p>QUEREMOS QUE TENGAS LA MEJOR EXPERIENCIA DE COMPRA EN CRUELLASHOWROOM. A CONTINUACIÓN TE CONTAMOS COMO REALIZAR TU PEDIDO DE FORMA FÁCIL Y SEGURA. <p> 01- LOGUEATE O REGISTRATE <br>	 Ingresá tus datos de usuario o regístrate para visualizar los precios. </p> <p>	02- LLENÁ TU CARRITO <br> Seleccioná los artículos que quieras eligiendo el color y el talle. Cargá tu carrito por un monto mínimo de $10000 y en el momento de finalizar la compra, seleccioná el transporte de tu preferencia o retiro personal. </p> <p>	03- CONFIRMÁ TU PEDIDO Y PAGÁ TU COMPRA <br>	 Luego de finalizar tu pedido completando todos los datos necesarios, deberás confirmar tu compra enviándonos tu número de pedido a nuestras líneas de whatsapp: -Confirmá al (11) 00000000 tu compra con envío a CABA/GBA -Confirmá al (11) 00000000 tu compra con envío a Provincia Una vez recibamos tu mensaje procesaremos tu orden y nos pondremos en contacto para coordinar la forma de pago, que se deberá realizar en un lapso de 96 horas hábiles. Pasado dicho plazo se cancelará de forma automatica el pedido. Podes abonar con efectivo, deposito, transferencia y mercado pago sin recargo. </p> <p> 04- RECIBÍ TU PEDIDO <br>	 Te envíaremos el pedido por la empresa de tu preferencia en un lapso de 96 horas (Días hábiles).	</p> <p> IMPORTANTE: <br> Una vez concretado el pedido online no se aceptan modificaciones por ningún motivo (agregar o sacar prendas). Cada orden de compra deberá realizarse con compromiso por parte del cliente. Los cambios se realizan únicamente por artículos fallados. En caso de que una tercera persona vaya a retirar su pedido, deberá avisar con anticipación y enviar nombre completo y dni de la persona autorizada. Y en el momento de retiro debe presentar su documento válido original.Las entregas realizadas en nuestras sucursales son únicamente un punto para retirar su compra y no para venta comercial.</p></p>
 			</section>
 		</main>
 		<footer>
 			<div>
-				<h1 class="textRight textTransform">mapa del sitio</h1>
-				<h2 class="textRight textTransform">información de contacto</h2>
-			</div>
-			<div>
-				<a href="#"><img src="img/facebook-icon.png" alt="seguinos en facebook"></a>
-				<a href="#"><img src="img/instagram-icon.png" alt="seguinos en instagram"></a>
-				<a href="#"><img src="img/twitter-icon.png" alt="seguinos en twitter"></a>
+				<h1 class="textLeft textTransform">mapa del sitio</h1>
+				<h2 class="textLeft textTransform">información de contacto</h2>
 			</div>
 			<div>
 				<a href="https://wa.me/<number>">
