--- a/contacto.html
+++ b/contacto.html
@@ -11,44 +11,30 @@
 	</head>
 	<body>
 		<header>
-			<div>
-				<a href="index.html">
-					<img src="img/logo.png" alt="logo Cruellashowroom">
-				</a>
-			</div>
-		
-				<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-  <div class="container-fluid">
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="tienda.html">TIENDA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="looks2021.html">LOOK2021</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sale.html">SALE</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="comocomprar.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            COMOCOMPRAR
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="contcto.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+			<nav>
+				<div>
+					<a href="index.html">
+						<img src="img/logo.png" alt="logo Cruellashowroom">
+					</a>
+				</div>
+				<ul>
+					<li>
+						<a href="tienda.html">Tienda</a>
+					</li>
+					<li>
+						<a href="sale.html">Sale</a>
+					</li>
+					<li>
+						<a href="looks2021.html">looks2021</a>
+					</li>
+					<li>
+						<a href="comocomprar.html">Ayuda</a>
+					</li>
+					<li>
+						<a href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
 		<main>
 			<section>
@@ -104,13 +90,8 @@
 		</main>
 		<footer>
 			<div>
-				<h2 class="textRight textTransform">mapa del sitio</h2>
-				<h2 class="textRight textTransform">información de contacto</h2>
-			</div>
-			<div>
-				<a href="#"><img src="img/facebook-icon.png" alt="seguinos en facebook"></a>
-				<a href="#"><img src="img/instagram-icon.png" alt="seguinos en instagram"></a>
-				<a href="#"><img src="img/twitter-icon.png" alt="seguinos en twitter"></a>
+				<h2 class="textLeft textTransform">mapa del sitio</h2>
+				<h2 class="textLeft textTransform">información de contacto</h2>
 			</div>
 			<div>
 				<a href="https://wa.me/<number>">
