--- a/looks2021.html
+++ b/looks2021.html
@@ -7,54 +7,42 @@
 		<meta name="keywords" content="ropa, indumentaria, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
 		<link rel="stylesheet" href="css/main.css">
-
-		<!-- titulo del showroom -->
 		<title>Cruellashowrooom</title>
 	</head>
 	<body>
 		<header>
+			<nav>
+				<div>
+					<a href="index.html">
+						<img src="img/logo.png" alt="logo Cruellashowroom">
+					</a>
+				</div>
+				<ul>
+					<li>
+						<a href="tienda.html">Tienda</a>
+					</li>
+					<li>
+						<a href="sale.html">Sale</a>
+					</li>
+					<li>
+						<a href="looks2021.html">looks2021</a>
+					</li>
+					<li>
+						<a href="comocomprar.html">Ayuda</a>
+					</li>
+					<li>
+						<a href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+			</nav>
 			<div>
-				<a href="index.html">
-					<img src="img/logo.png" alt="logoCruellashowroom">
-				</a>
-			</div>
-				<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-		  <div class="container-fluid">
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		    	<li class="nav-item">
-		        <a class="nav-link active" aria-current="page" href="tienda.html">TIENDA</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="looks2021.html">LOOK2021</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="sale.html">SALE</a>
-		      </li>
-		       <li class="nav-item dropdown">
-			        <a class="nav-link dropdown-toggle" href="comocomprar.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">COMOCOMPRAR
-		         	</a>
-		      	</li>
-	       		<li class="nav-item">
-	         		<a class="nav-link disabled" href="contacto.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
-	        	</li>
-		     	</ul>
-		      <form class="d-flex">
-		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-		        <button class="btn btn-outline-success" type="submit">Search</button>
-		      </form>
-		    </div>
-		  </div>
-		</nav>
-			<div>
-				<img id="decoracion" src="img/decoracion.png" alt="articuloDecoracion">
+				<img src="img/decoracion.png" alt="articuloDecoracion">
 				<p class="linear-gradient">"La felicidad es el secreto de toda belleza. No hay belleza sin felicidad"</p>
 			</div>
 		</header>
+
 		<!-- aca van imagenes de prendas combinadas de diferente forma, armando distintos looks -->
+
 		<main>
 			<section>
 				<img src="img/look1.png" alt="look1">
@@ -67,13 +55,8 @@
 		</main>
 		<footer>
 			<div>
-				<h1 class="textRight textTransform">mapa del sitio</h1>
-				<h2 class="textRight textTransform">información de contacto</h2>
-			</div>
-			<div>
-				<a href="#"><img src="img/facebook-icon.png" alt="seguinos en facebook"></a>
-				<a href="#"><img src="img/instagram-icon.png" alt="seguinos en instagram"></a>
-				<a href="#"><img src="img/twitter-icon.png" alt="seguinos en twitter"></a>
+				<h1 class="textLeft textTransform">mapa del sitio</h1>
+				<h2 class="textLeft textTransform">información de contacto</h2>
 			</div>
 			<div>
 				<a href="https://wa.me/<number>">
