--- a/sale.html
+++ b/sale.html
@@ -11,74 +11,49 @@
 	</head>
 	<body>
 		<header>
-			<div>
-				<a href="index.html">
-					<img src="img/logo.png" alt="logo Cruellashowroom">
-				</a>
-			</div>
-			<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-  <div class="container-fluid">
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="tienda.html">TIENDA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="looks2021.html">LOOK2021</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sale.html">SALE</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="comocomprar.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            COMOCOMPRAR
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">MINORISTA</a></li>
-            <li><a class="dropdown-item" href="#">MAYORISTA</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#"> SEGUIR ENVIO</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="contacto.html" tabindex="-1" aria-disabled="true">CONTACTO</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-			<div class="titulo">
-			<h1 class="titulo__descuento">Todos nuestros productos con descuento</h1>
-			</div>
+			<nav>
+				<div>
+					<a href="index.html">
+						<img src="img/logo.png" alt="logo Cruellashowroom">
+					</a>
+				</div>
+				<ul>
+					<li>
+						<a href="tienda.html">Tienda</a>
+					</li>
+					<li>
+						<a href="sale.html">Sale</a>
+					</li>
+					<li>
+						<a href="looks2021.html">looks2021</a>
+					</li>
+					<li>
+						<a href="comocomprar.html">Ayuda</a>
+					</li>
+					<li>
+						<a href="contacto.html">Contacto</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		<main class="todo">
-			<div class="todo__sale">
+		<main>
+			<div>
 				<img class="agrandar" src="img/bota.jpg" alt="botaDescuento">
 				<h1>precio 1500$</h1>
-		 </div>
-		
+		 	</div>
 			<div>
 				<img class="agrandar" src="img/zapatilla.jpg" alt="zapatillaDescuento">
-				<h2>precio 1650$</h2>
+				<h1>precio 1650$</h1>
 			</div>
-		
 			<div>
 				<img class="agrandar" src="img/borcego.jpg" alt="bocegoDescuento">
-				<h3>precio 1950$</h3>
+				<h1>precio 1950$</h1>
 			</div>
-				
-	 	</main>
+		</main>
 	 	<div>
-	 				<section >
-				<table class="precio" >
-					<tr class="precio__comprar">
+	 		<section>
+				<table>
+					<tr>
 						<td>Producto</td>
 						<td>Código</td>
 						<td>Precio</td>
@@ -102,19 +77,13 @@
 						<td>
 						</td>
 					</tr>
-					
 				</table>
-
-	</body>
-	<footer>
+			</section>
+		</div>
+		<footer>
 			<div>
-				<h4 class="textRight textTransform">mapa del sitio</h4>
-				<h5 class="textRight textTransform">información de contacto</h5>
-			</div>
-			<div>
-				<li class="facebook-icon"></li>
-				<li class="twitter-icon"></li>
-				<li class="instagram-icon"></li>
+				<h2 class="textLeft textTransform">mapa del sitio</h2>
+				<h2 class="textLeft textTransform">información de contacto</h2>
 			</div>
 			<div>
 				<a href="https://wa.me/<number>">
@@ -122,4 +91,5 @@
 				</a>
 			</div>
 		</footer>
-		</html>
+	</body>
+</html>
