--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="cruellashowroom- indumentaria y accesorios. Descubrí nuestra nueva temporada Primavera Verano de Ropa Femenina. ¡Venta al por Mayor y menos! Envíos a todo el País. ">
-		<meta name="keywords" content="ropa, indumentaria, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
+		<meta name="keywords" content="ropa,vestimenta, indumentaria, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
 		<link rel="stylesheet" href="css/main.css">
 		<title>Cruellashowrooom</title>
