--- a/comocomprar.html
+++ b/comocomprar.html
@@ -6,18 +6,22 @@
 		<meta name="description" content="cruellashowroom- indumentaria y accesorios. Descubrí nuestra nueva temporada Primavera Verano de Ropa Femenina. ¡Venta al por Mayor y menos! Envíos a todo el País. ">
 		<meta name="keywords" content="ropa, indumentaria, vestimenta, femenina, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/main.css">
 		<title>Cruellashowrooom</title>
 	</head>
 	<body>
 		<header>
-			<nav>
-				<div>
-					<a href="index.html">
-						<img src="img/logo.png" alt="logo Cruellashowroom">
-					</a>
-				</div>
-				<ul>
+			<nav class="navbar navbar-expand-md navbar-light bg-light">
+			  <div class="container-fluid">
+			    <a class="navbar-brand" href="index.html">
+			    	<img src="img/logo.png" alt="logo Cruellashowroom">
+			    </a>
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+			    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			      <ul>
 					<li>
 						<a href="tienda.html">Tienda</a>
 					</li>
@@ -25,7 +29,7 @@
 						<a href="sale.html">Sale</a>
 					</li>
 					<li>
-						<a href="looks2021.html">looks2021</a>
+						<a href="looks2021.html">looks</a>
 					</li>
 					<li>
 						<a href="comocomprar.html">Ayuda</a>
@@ -34,6 +38,8 @@
 						<a href="contacto.html">Contacto</a>
 					</li>
 				</ul>
+			    </div>
+			  </div>
 			</nav>
 			<div>
 				<img class="local" src="img/local.png" alt="Cruella showroom indumentaria femenina">
