--- a/sale.html
+++ b/sale.html
@@ -7,17 +7,21 @@
 		<meta name="description" content="cruellashowroom- indumentaria y accesorios. Descubrí nuestra nueva temporada Primavera Verano de Ropa Femenina. ¡Venta al por Mayor y menos! Envíos a todo el País. ">
 		<meta name="keywords" content="ropa, indumentaria, femenina, vestimenta, mayorista, minorista, accesorios, sale, sale indumentaria">
 		<meta name="autor" content="autor.com.ar">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">	
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<header>
-			<nav>
-				<div>
-					<a href="index.html">
-						<img src="img/logo.png" alt="logo Cruellashowroom">
-					</a>
-				</div>
-				<ul>
+			<nav class="navbar navbar-expand-md navbar-light bg-light">
+			  <div class="container-fluid">
+			    <a class="navbar-brand" href="index.html">
+			    	<img src="img/logo.png" alt="logo Cruellashowroom">
+			    </a>
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+			    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			      <ul>
 					<li>
 						<a href="tienda.html">Tienda</a>
 					</li>
@@ -25,7 +29,7 @@
 						<a href="sale.html">Sale</a>
 					</li>
 					<li>
-						<a href="looks2021.html">looks2021</a>
+						<a href="looks2021.html">looks</a>
 					</li>
 					<li>
 						<a href="comocomprar.html">Ayuda</a>
@@ -34,21 +38,16 @@
 						<a href="contacto.html">Contacto</a>
 					</li>
 				</ul>
+			    </div>
+			  </div>
 			</nav>
 		</header>
 		<main>
-			<div>
+			<article class="container">
 				<img class="agrandar" src="img/bota.jpg" alt="botaDescuento">
-				<h1>precio 1500$</h1>
-		 	</div>
-			<div>
 				<img class="agrandar" src="img/zapatilla.jpg" alt="zapatillaDescuento">
-				<h1>precio 1650$</h1>
-			</div>
-			<div>
 				<img class="agrandar" src="img/borcego.jpg" alt="bocegoDescuento">
-				<h1>precio 1950$</h1>
-			</div>
+			</article>
 		</main>
 	 	<div>
 	 		<section>
